<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/idRLContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_squeda_por_fecha"
        android:textColor="#374151"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pick_date"
            android:layout_width="213dp"
            android:layout_height="55dp"
            android:text="@string/seleccionar_fecha"
            android:textAllCaps="false" />

        <ImageButton
            android:id="@+id/search_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_search" />
    </LinearLayout>



    <TextView
        android:id="@+id/result_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_se_encontr_resultados"
        android:textColor="#374151"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cards_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
        </LinearLayout>
    </ScrollView>
</LinearLayout>