<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/event_detail_artist_name"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/event_detail_category"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/event_detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/event_detail_description_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_detail_description_title"
            />
        <TextView
            android:id="@+id/event_detail_description"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/event_detail_datetime_location_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_detail_location_datetime_title"
            />
        <TextView
            android:id="@+id/event_detail_location"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/event_detail_date"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/event_detail_time"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/event_detail_ticket_value_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details_ticket_price_title"
            />
        <TextView
            android:id="@+id/event_detail_ticket_value"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
